# routes/api.php
@@ -69,7 +69,8 @@ Route::middleware(['auth:sanctum', 'ability:user'])->group(function () {
     Route::post('/ocr', [VocabularyNoteController::class, 'textOcr']);
     Route::get('/public/notes', [VocabularyNoteController::class, 'publicIndex']);
     Route::get('/notes/{levelId}', [VocabularyNoteController::class, 'levelShow']);
-    Route::get('/copy/{noteId}', [VocabularyNoteController::class, 'noteCopy']);
+    Route::post('/copy/{noteId}', [VocabularyNoteController::class, 'noteCopy']);
+    Route::post('/progress/{noteId}', [VocabularyNoteController::class, 'progressUpdate']);
   });
   Route::prefix('/typing')->group(function () {
     Route::get('/getSentences', [TypingPracticeController::class, 'getSentences']);
